- Remove resources from vino entry. The functionality can be replicated (if needed) using =vino-entry-create-handle-functions=.
- Get rid of =vino-entry= struct. Since =vulpea-note= became powerful enough there is little value in =vino-entry=.

*Features*

- Introduce rating precision, controlled by =vino-rating-precision=. See its documentation for more information.
- Introduce =vino-entry-create-handle-functions= as an extension point for vino entry.
- Introduce =vino-entry-update-handle-functions= as an extension point for vino entry.
- Introduce =vino-rating-create-handle-functions= as an extension point for vino rating.
- New function - =vino-entry-insert=.
- Inventory management. See relevant section in readme.
- Default templates now include proper tags.
- Use sane default for =vino-rating-props=.
- Ask for carbonation method for sparkling wines.
- Include extra information for traditional sparkling wines.
- Round rating when updating it.

** v0.3.1

*Features*

- [[https://github.com/d12frosted/vino/issues/55][vino#55]] Provide =vino-sources-fn= variable to allow completion of sources
  when acquiring a wine.
- [[https://github.com/d12frosted/vino/issues/64][vino#64]] Allow to provide extra meta when rating a wine.
- Allow to provide extra tags in all templates.

** v0.3.0

Primarily migration to =org-roam= v2 that has many improvements and breaking
changes. See [[https://org-roam.discourse.group/t/the-org-roam-v2-great-migration/1505][The Org-roam v2 Great Migration]] for more information on automatic
migration. There will be a separate script to migrate all =vino= entries.

*Features*

- Faster database updates via =vino-db-update-file=, which is called
  automatically on buffer save. Also, since =org-roam= has changed the way
  database is built, =vino= doesn't advice/hook into =org-roam= database build
  process, but instead provides a separate pipeline similar to one in
  =org-roam=. See relevant section of README for more information.
